--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "name": "Softoom",
     "version": "0.0.0",
-
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -9,7 +8,6 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
     },
-
     "dependencies": {
         "@angular/animations": "^14.2.0",
         "@angular/common": "^14.2.0",
@@ -20,10 +18,10 @@
         "@angular/platform-browser-dynamic": "^14.2.0",
         "@angular/router": "^14.2.0",
         "rxjs": "~7.5.0",
+        "three": "^0.150.1",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
     },
-    
     "devDependencies": {
         "@angular-devkit/build-angular": "^14.2.6",
         "@angular/cli": "~14.2.6",
@@ -38,6 +36,4 @@
         "prettier": "^2.7.1",
         "typescript": "~4.7.2"
     }
-
 }
-
