--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@angular-devkit/build-angular": "^14.2.6",
         "@angular/cli": "~14.2.6",
         "@angular/compiler-cli": "^14.2.0",
+        "@parcel/config-default": "^2.8.3",
         "@types/jasmine": "~4.0.0",
         "jasmine-core": "~4.3.0",
         "karma": "~6.4.0",
@@ -33,6 +34,7 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.0.0",
+        "parcel-reporter-static-files-copy": "^1.5.0",
         "prettier": "^2.7.1",
         "typescript": "~4.7.2"
     }
