--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "cors": "^2.8.5",
     "rxjs": "~7.5.0",
     "three": "^0.150.1",
     "tslib": "^2.3.0",
