--- a/frontend/Softoom/package.json
+++ b/frontend/Softoom/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@stripe/stripe-js": "^1.52.0",
+    "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.8.0",
     "three": "^0.150.1",
     "tslib": "^2.3.0",
