--- a/frontend/Softoom/package.json
+++ b/frontend/Softoom/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@auth0/auth0-angular": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.8.0",
