--- a/frontend/Softoom/Dockerfile
+++ b/frontend/Softoom/Dockerfile
@@ -4,7 +4,7 @@ FROM node:16-alpine as build
 WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
-RUN npm ci --silent
+RUN npm install
 COPY . ./
 RUN npm run build
 
