--- a/frontend/Softoom/Dockerfile
+++ b/frontend/Softoom/Dockerfile
@@ -2,14 +2,12 @@
 # basically, this compiles the Angular project to static HTML and js files.
 FROM node:16-alpine as build
 WORKDIR /app
-COPY package.json ./
-COPY package-lock.json ./
+COPY ..
 RUN npm install
-COPY . ./
 RUN npm run build
 
 # Serve these static files with NGINX.
 FROM nginx:1.21.6-alpine
-COPY --from=build /app/frontend /usr/share/nginx/html
+COPY --from=build /app/dist/frontend /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
