--- a/frontend/Softoom/Dockerfile
+++ b/frontend/Softoom/Dockerfile
@@ -8,6 +8,6 @@ RUN npm run build
 
 # Serve these static files with NGINX.
 FROM nginx:1.21.6-alpine
-COPY --from=build /app/dist/frontend/Softoom /usr/share/nginx/html
+COPY --from=build /app/dist/softoom /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
